test/resources/valid/com/boothj5/jarchexample/application/person/repository/PersonRepository.java
package com.boothj5.jarchexample.application.person.repository;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.person.dao.PersonDAO;
