test/resources/invalid/com/boothj5/jarchexample/application/address/repository/AddressRepository.java
package com.boothj5.jarchexample.application.address.repository;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.address.dao.AddressDAO;
